--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practica-semana12",
+  "name": "Systema-Inventario",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "or": "^0.2.0",
     "roboto-fontface": "*",
     "sweetalert2": "^11.14.4",
     "vue": "^3.2.13",
