--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.7.7",
+    "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "or": "^0.2.0",
     "roboto-fontface": "*",
     "sweetalert2": "^11.14.4",
@@ -18,9 +21,10 @@
     "vue-router": "^4.0.3",
     "vue3-tree": "^0.11.5",
     "vuejs-tree": "^3.0.2",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.8.11",
     "vuex": "^4.0.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "webpack-plugin-vuetify": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
